--- a/2022，单列复选，多列复选，psd系列，小橙随机方案.htm
+++ b/2022，单列复选，多列复选，psd系列，小橙随机方案.htm
@@ -5,20 +5,23 @@
 核心方法1# 单列复选，或多列复选
 
 核心方法2，齐满位后，允许列2，列3停止，
+
 ✔ 核心方法2
+
 09-31-随机加入列满，复制写入input后打出，然后放入传值随机复选
 
 09-31-随机加入列满，复制写入input后打出，然后放入传值随机复选
 
 ✔ 核心方法3
+
 或绝对概率写入+input满位，合并，复选
 
 然后复制传值到复选框复选
 
 
-#单列多位才够复选
+#随机加入，单列多位才够复选
 
-#多列是获取所有的列复选
+#随机加入，多列是获取所有的列，复选
 
 
 
